# sih

./: .flake8  .gitignore  ASSUMPTIONS.md  Dockerfile  README.md  VERIFICATION_REPORT.md  docker-compose.yml  mock_export.py  mock_inference.py  mock_training.py  mock_verify_export.py  pyproject.toml  requirements.txt  run_app.bat  run_tests.py  simple_app.py  validate_coco.py
.github/workflows/: ci.yml
DOCS/: USAGE.md  architecture.md
configs/: mask_rcnn_atc.yaml
data/synthetic/: annotations.json
scripts/: export_model.py  verify_export.py
src/: __init__.py  inference.py  train.py
src/app/: __init__.py  app.py
src/data/: __init__.py  generate_synthetic_data.py
src/measurement/: __init__.py  core.py
tests/: __init__.py  test_data.py  test_integration.py  test_measurement.py
